crates/mel-cli/src/snapshots/mel_inspect__tests__sema_local_proc_forward_reference.snap
---
source: crates/mel-cli/src/main.rs
assertion_line: 1131
expression: "render_snapshot(\"sema/proc/local-forward-reference.mel\",\ninclude_str!(\"../../../tests/corpus/sema/proc/local-forward-reference.mel\"),)"
---
source: sema/proc/local-forward-reference.mel
encoding: utf-8
items: 2
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 1
[31mError:[0m sema: local proc "helper" is called before its definition
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m sema/proc/local-forward-reference.mel:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [35mh[0m[35me[0m[35ml[0m[35mp[0m[35me[0m[35mr[0m[35m([0m[35m)[0m[38;5;249m;[0m
 [38;5;240m  │[0m [35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m┬[0m[35m─[0m[35m─[0m[35m─[0m  
 [38;5;240m  │[0m     [35m╰[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m local proc "helper" is called before its definition
[38;5;246m───╯[0m
