crates/mel-cli/src/snapshots/mel_inspect__tests__sema_move_target_tail.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"sema/command-schema/move-target-tail.mel\",\ninclude_str!(\"../../../tests/corpus/sema/command-schema/move-target-tail.mel\"),)"
---
source: sema/command-schema/move-target-tail.mel
encoding: utf-8
items: 2
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 0
