crates/mel-cli/src/snapshots/mel_inspect__tests__sema_poly_edit_uv_explicit_target.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"sema/command-schema/poly-edit-uv-explicit-target.mel\",\ninclude_str!(\"../../../tests/corpus/sema/command-schema/poly-edit-uv-explicit-target.mel\"),)"
---
source: sema/command-schema/poly-edit-uv-explicit-target.mel
encoding: utf-8
items: 1
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 0
