crates/mel-cli/src/snapshots/mel_inspect__tests__sema_scripted_panel_flag_mode_span_tabbed.snap
---
source: crates/mel-cli/src/main.rs
assertion_line: 1300
expression: "render_snapshot(\"sema/lint/scripted-panel-flag-mode-span-tabbed.mel\",\ninclude_str!(\"../../../tests/corpus/sema/lint/scripted-panel-flag-mode-span-tabbed.mel\"),)"
---
source: sema/lint/scripted-panel-flag-mode-span-tabbed.mel
encoding: utf-8
items: 1
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 1
[33mWarning:[0m sema: unresolved variable "$gMainPane"
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m sema/lint/scripted-panel-flag-mode-span-tabbed.mel:1:61 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m$[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249mN[0m[38;5;249ma[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m`[0m[38;5;249ms[0m[38;5;249mc[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mp[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249md[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mB[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mV[0m[38;5;249mi[0m[38;5;249ms[0m[38;5;249mi[0m[38;5;249mb[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mu[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[33m$[0m[33mg[0m[33mM[0m[33ma[0m[33mi[0m[33mn[0m[33mP[0m[33ma[0m[33mn[0m[33me[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249my[0m[38;5;249mL[0m[38;5;249ma[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m"[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mO[0m[38;5;249mf[0m[38;5;249mf[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mt[0m[38;5;249my[0m[38;5;249mp[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249ma[0m[38;5;249mc[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249mT[0m[38;5;249my[0m[38;5;249mp[0m[38;5;249me[0m[38;5;249m"[0m[38;5;249m`[0m[38;5;249m;[0m
 [38;5;240m  │[0m                                                             [33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m┬[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m  
 [38;5;240m  │[0m                                                                  [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m unresolved variable "$gMainPane"
[38;5;246m───╯[0m
